# UWAIL

./: .gitignore  README.md  mocap_simulation.py  requirements.txt
mirte_mapping_interfaces/: CMakeLists.txt  package.xml
mirte_mapping_interfaces/msg/: ObjectMap3D.msg  Observation3D.msg  Observation3DArray.msg  TrackedObject3D.msg
mocap_simulation/: package.xml  setup.cfg  setup.py
mocap_simulation/config/: uwail_params.yaml
mocap_simulation/launch/: static_sensor_tf.launch.py  uwail_pipeline_amcl.launch.py  uwail_pipeline_vicon.launch.py
mocap_simulation/maps/: delft1103_exp_map_4_poste9.pgm  delft1103_exp_map_4_poste9.yaml  delft1803_exp_map_3_full.pgm  delft1803_exp_map_3_full.yaml
mocap_simulation/mocap_simulation/: vicon_to_tf_node.py
object_map/: package.xml  setup.cfg  setup.py
object_map/object_map/: detector_model.py  map_state_logger.py  math_helpers.py  object_map.py  object_map_node.py  tracked_object.py  visibility.py  visualization_helpers.py
yolo_backprojection_ros2/: package.xml  setup.cfg  setup.py
yolo_backprojection_ros2/yolo_backprojection_ros2/: 3d_bbox_marker_node.py  back_projection_core.py  back_projection_node.py  measurement_model2.py
yolo_seg_ros2/: package.xml  setup.cfg  setup.py
yolo_seg_ros2/yolo_seg_ros2/: yolo_seg_core.py  yolo_seg_node.py
