<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.r.marseille@student.tudelft.nl">smarseille</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>object_map</exec_depend>
  <exec_depend>yolo_seg_ros2</exec_depend>
  <exec_depend>yolo_backprojection_ros2</exec_depend>
  <exec_depend>mirte_mapping_interfaces</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
